@@ -1,9 +1,4 @@
 MSP430 Bootstrap Loader Version: 1.39-telos-6
+Use -h for help
 Mass Erase...
 Transmit default password ...
-Invoking BSL...
-Transmit default password ...
-Current bootstrap loader version: 1.61 (Device ID: f16c)
-Changing baudrate to 38400 ...
-Program ...
-22526 bytes programmed.
